--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,9 +4,9 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Ubuntu-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto", "Ubuntu-Regular", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
